<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        tools:context=".ui.OrderDetailsActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/order_detail_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F0F8FF"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <TextView
                android:id="@+id/order_detail_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#3994D1"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="R$ 100,00" />

            <TextView
                android:id="@+id/order_detail_payment_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/order_detail_value"
                tools:text="Cartão de crédito" />

            <TextView
                android:id="@+id/order_detail_own_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/order_detail_value"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="OWN_ID" />

            <TextView
                android:id="@+id/order_detail_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/order_detail_own_id"
                tools:text="VOWBGC4Z7FVS" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/order_detail_buyer_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/buyer_label"
            android:textColor="#A7A9AC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_detail_header" />

        <TextView
            android:id="@+id/order_detail_buyer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/order_detail_buyer_label"
            app:layout_constraintTop_toBottomOf="@id/order_detail_buyer_label"
            tools:text="Jose de Souza" />

        <TextView
            android:id="@+id/order_detail_buyer_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/order_detail_buyer_name"
            app:layout_constraintTop_toBottomOf="@id/order_detail_buyer_name"
            tools:text="a@bc.com" />

        <View
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#A7A9AC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_detail_buyer_email" />


        <View
            android:id="@+id/divider_middle"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="#A7A9AC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_1" />


        <View
            android:id="@+id/divider_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#A7A9AC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_middle" />


        <TextView
            android:id="@+id/order_detail_created_at_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:text="@string/created_at"
            android:textColor="#A7A9AC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/divider_middle" />

        <TextView
            android:id="@+id/order_detail_created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@id/order_detail_created_at_label"
            app:layout_constraintTop_toBottomOf="@id/order_detail_created_at_label"
            tools:text="10/10/2019" />

        <TextView
            android:id="@+id/order_detail_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/status"
            android:textColor="#A7A9AC"
            app:layout_constraintStart_toEndOf="@id/divider_middle"
            app:layout_constraintTop_toTopOf="@id/divider_middle" />

        <TextView
            android:id="@+id/order_detail_updated_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/divider_middle"
            tools:text="10/10/2019" />

        <TextView
            android:id="@+id/order_detail_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider_middle"
            app:layout_constraintTop_toBottomOf="@+id/order_detail_status_label"
            tools:text="Não Pago" />

        <TextView
            android:id="@+id/order_detail_resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/resume"
            android:textColor="#A7A9AC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_2" />

        <TextView
            android:id="@+id/order_detail_total_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_vallue"
            app:layout_constraintStart_toStartOf="@id/order_detail_resume"
            app:layout_constraintTop_toBottomOf="@id/order_detail_resume" />

        <TextView
            android:id="@+id/order_detail_fee_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fee"
            app:layout_constraintStart_toStartOf="@id/order_detail_total_value_label"
            app:layout_constraintTop_toBottomOf="@id/order_detail_total_value_label" />


        <TextView
            android:id="@+id/order_detail_liquid_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liquid_value"
            app:layout_constraintStart_toStartOf="@id/order_detail_fee_label"
            app:layout_constraintTop_toBottomOf="@id/order_detail_fee_label" />


        <TextView
            android:id="@+id/order_detail_total_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/order_detail_total_value_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/order_detail_total_value_label"
            tools:text="+ R$ 100,00" />

        <TextView
            android:id="@+id/order_detail_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textColor="#F44336"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/order_detail_fee_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/order_detail_fee_label"
            tools:text="- R$ 4,00" />

        <TextView
            android:id="@+id/order_detail_liquid_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/order_detail_liquid_value_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/order_detail_liquid_value_label"
            tools:text="= R$ 96,00" />

        <View
            android:id="@+id/divider_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#A7A9AC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_detail_liquid_value_label" />

        <TextView
            android:id="@+id/order_detail_payments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16dp"
            android:text="@string/payments"
            android:textColor="#A7A9AC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/divider_3" />

        <TextView
            android:id="@+id/order_detail_payment_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/order_detail_payments"
            app:layout_constraintTop_toTopOf="@id/divider_3"
            tools:text="3 pagamentos" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
